snake moves from one side to other mantaining direction

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,6 +29,9 @@ main {
   grid-row: 10 / 11;
   background-color: #ffffff;
 }
+.phantom {
+  background-color: #ffffff;
+}
 #food {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
